--- a/ClientApp/package.json
+++ b/ClientApp/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "7.2.7",
     "@angular/compiler": "7.2.7",
     "@angular/core": "7.2.7",
+    "@angular/flex-layout": "^7.0.0-beta.23",
     "@angular/forms": "7.2.7",
     "@angular/http": "7.2.7",
     "@angular/material": "^7.3.3",
@@ -24,7 +25,7 @@
     "@angular/platform-browser-dynamic": "7.2.7",
     "@angular/platform-server": "7.2.7",
     "@angular/router": "7.2.7",
-    "@nguniversal/module-map-ngfactory-loader": "6.0.0",
+    "@nguniversal/module-map-ngfactory-loader": "^7.1.0",
     "aspnet-prerendering": "^3.0.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
@@ -33,14 +34,14 @@
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.0",
+    "@angular-devkit/build-angular": "^0.13.4",
     "@angular/cli": "~7.3.3",
     "@angular/compiler-cli": "7.2.7",
     "@angular/language-service": "^7.2.7",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "~4.2.1",
+    "codelyzer": "^4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^3.0.0",
@@ -51,7 +52,7 @@
     "typescript": "~3.2.4"
   },
   "optionalDependencies": {
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.11.0",
     "protractor": "~5.4.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1"
