--- a/BetterOwner.csproj
+++ b/BetterOwner.csproj
@@ -24,7 +24,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.0-preview3.19153.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.0.0-preview3.19153.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.0-preview3.19153.1" />
-    <PackageReference Include="Sdcb.AspNetCore.Authentication.YeluCasSso" Version="1.0.6" />
+    <PackageReference Include="Sdcb.AspNetCore.Authentication.YeluCasSso" Version="1.1.0-preview1" />
   </ItemGroup>
 
   <ItemGroup>
